[package]
name = "rpi-display-brightness"
version = "0.1.0"
authors = ["Petko <pavlovskipetko@abv.bg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
run_script = "^0.8.0"

[dependencies.druid]
version = "0.6.0"
features = ["im", "svg", "image"]